# hf-daily-papers-analytics

./: .gitignore  README.md  VISUALIZATIONS.md  pyproject.toml
.github/workflows/: test.yml  update_hf_datasets.yml
analysis/: duplicate_paper_ids.md  thumbnail_vs_pdf_comparison.txt
hf_daily_papers_analytics/: hf_papers_scraper.py  utils.py
scripts/: compare_thumbnail_vs_pdf.py  fetch_author_info.py  run_scraper.py  update_hf_datasets.py  use_gpt_to_fill_detailed_author_info.py
tests/: test_extract_paper_details_with_metadata.py  test_get_papers.py  test_merge_datasets.py
utils/: hf_datasets_scraper.py
visualizations/: analyze.py  c10_first_authors_per_last_author_table.csv  c11_num_authors_per_paper_table.csv  c12_first_author_papers_per_author_table.csv  c13_last_author_papers_per_author_table.csv  c9_papers_per_author_table.csv  d1_top_authors.csv  d2_top_affiliations.csv  d3_top_first_authors.csv  d4_top_last_authors.csv  d5_papers_per_affiliation.csv  d6_top_author_collaborations.csv  d7_top_institution_collaborations.csv  e_paper_origin_summary.csv  g1_authors_per_institution.csv  h1_author_summary_stats.csv  h3_exhaustive_surnames_table.csv  h4_exhaustive_affiliations_table.csv
